# Movie-Recommender-System

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
als/: Dockerfile  als.py
analysis/: m4_feedback.ipynb.ipynb  m4_security.ipynb
configs/: routes.yaml
data_pipeline/: Dockerfile  batch_proprocess.py  simple_ingestion.py
data_quality/: check_drift.py  check_schema.py
hybrid_docker/: Dockerfile  README.md  inference.py  prometheus.yml  prometheus.yml.txt  requirements.txt  train.py  utils.py
hybrid_docker/models/: item_features.joblib  user_features.joblib
hybrid_model/: infrence.py  lightfm_dataset.joblib  train_lightfm.py  utils.py
infrastructure/: docker-compose.yml
kubernetes/: Dockerfile.loadbalancer  cronjob-als-trainer.yaml  cronjob-hybrid-trainer.yaml  load-balancer-deployment.yaml  loadbalancer.py  model-pvc.yaml  namespace.yaml  preprocessing.yaml
models/als@v1/: manifest.yaml
notebooks/: baseline_als.ipynb  data_preprocess.ipynb  fairness_analysis.ipynb  online_evaluation.ipynb  svd.ipynb
services/data-lake/: Dockerfile  README.md  pyproject.toml
services/data-lake/shrekommender_datalake/: __init__.py
services/data-lake/shrekommender_datalake/spark_jobs/: __init__.py  kafka_to_s3.py
services/data-lake/shrekommender_datalake/spark_jobs/parsers/: __init__.py  spark_parser.py
shared/: pyproject.toml
shared/shrekommender_common/: __init__.py
shared/shrekommender_common/schemas/: __init__.py  base.py  converters.py  events.py  parsing_rules.py
src/shrekommender_system/: __init__.py  api.py  cli.py
src/shrekommender_system/config/: __init__.py  center.py  data.py  loader.py  paths.py  serving.py  training.py
src/shrekommender_system/data/: __init__.py  call_api.py  ingestion.py  preprocessing.py  schema.py
src/shrekommender_system/models/: __init__.py  (+2 more)
(+17 files in other folders)
